# rust-mnist

./: .gitignore  Cargo.toml  README.md  index.html
src/: cost.rs  digit_image.rs  main.rs  network.rs
