[package]
name = "rust-mnist"
version = "0.1.0"
authors = ["Alec Theriault <alec.theriault@gmail.com>"]
edition = "2018"

[features]
default = []
gpu = ["ndarray/blas", "blas-src"]

[dependencies]
image = "0.21.2"
rand = "0.7.0"
rand_distr = "0.2.1"
ndarray = "0.12.1"
blas-src = { version = "0.2", features = ["intel-mkl"], optional = true }
simple-server = "0.4.0"
